--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <div class="module" id="emotion-gradient-bottom"></div>
             <div class="module" id="emotion-gradient"></div>
             <div class="module" id="emotion-history-grid"></div>
-            <!-- <div class="module" id="particles"></div> -->
+            <div class="module" id="particles"></div>
 
-            <!-- <canvas width="960" height="500" style="background-color: black"></canvas> -->
+            <canvas width="1500" height="500" style="background-color: black"></canvas>
             <div>
                 <button onclick="getResponse()">get response</button>
                 <span class="conversation-text"></span>
