--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-        <link rel="stylesheet" href="css/ionicons.min.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -30,28 +29,36 @@
         </div>
 
         <div id="main">
+            <div id="controls">
+            <button class="enter-fullscreen" title="Toggle Fullscreen">
+                Fullscreen
+            </button>
+<!--                 <input class="r1" type="range" min="200" max="400">
+                <input class="r2" type="range" min="2" max="300"> -->
+                <button onclick="getResponse()">get response</button>
+                <button onclick="dump()">dump</button>
+                <span class="conversation-text"></span>
+                <img class="loading-spinner" src="img/ajax-loader.gif">
+            </div>
             <div class="module" id="emotion-gradient-bottom"></div>
             <div class="module" id="emotion-gradient"></div>
             <div class="module" id="emotion-history-grid"></div>
             <div class="module" id="particles"></div>
 
-            <canvas width="1500" height="500" style="background-color: black"></canvas>
-            <div>
-                <button onclick="getResponse()">get response</button>
-                <span class="conversation-text"></span>
-                <img class="loading-spinner" src="img/ajax-loader.gif">
-            </div>
         </div>
 
         
 
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+<!--         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script> -->
         
-        <script src="https://d3js.org/d3.v4.min.js"></script>
-        <script src="js/apikey.js"></script>
+        <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
+        <script src="js/vendor/jquery-1.12.0.min.js"></script>        
+        <script src="js/vendor/d3.v4.min.js"></script>
         <script src="js/plugins.js"></script>
-        <script src="js/particles.js"></script>
+        <!-- <script src="js/particles.js"></script> -->
+        <script src="js/apikey.js"></script>
+
         <script src="js/main.js"></script>
 
     </body>
