--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="module" id="emotion-gradient"></div>
             <div class="module" id="emotion-history-grid"></div>
             <div class="module" id="particles"></div>
+            <div class="module" id="image-search"></div>
 
         </div>
 
