updates to the ball pit, and dump

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
             <button class="enter-fullscreen" title="Toggle Fullscreen">
                 Fullscreen
             </button>
-<!--                 <input class="r1" type="range" min="200" max="400">
+                <!-- <input class="r1" type="range" min="200" max="400">
                 <input class="r2" type="range" min="2" max="300"> -->
                 <button onclick="getResponse()">get response</button>
                 <button onclick="dump()">dump</button>
+                <button onclick="clearParticles()">clear</button>
                 <span class="conversation-text"></span>
                 <img class="loading-spinner" src="img/ajax-loader.gif">
             </div>
