--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
         <div id="main">
             <div id="controls">
-            <button class="enter-fullscreen" title="Toggle Fullscreen">
-                Fullscreen
-            </button>
+                <button class="enter-fullscreen" title="Toggle Fullscreen">
+                    Fullscreen
+                </button>
                 <!-- <input class="r1" type="range" min="200" max="400">
                 <input class="r2" type="range" min="2" max="300"> -->
                 <button onclick="getResponse()">get response</button>
@@ -45,6 +45,7 @@
             <div class="module" id="emotion-gradient"></div>
             <div class="module" id="emotion-history-grid"></div>
             <div class="module" id="particles"></div>
+            <!-- <div class="module" id="image-module"></div> -->
 
         </div>
 
