--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script> -->
         
         <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
-        <!-- <script src='https://code.responsivevoice.org/responsivevoice.js'></script> -->
+        <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
 
         <script src="js/vendor/jquery-1.12.0.min.js"></script>        
         <script src="js/vendor/d3.v4.min.js"></script>
