added shapes and constellations

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         </div>
         <div id="main">
             <canvas id="overlay"></canvas>
+            <div id="svgContainer"></div>
+            <div id="constellation"></div>
+            <div id="shape-drawing"></div>
             <div class="modules">
                 <div class="module" id="emotion-gradient-bottom"></div>
                 <div class="module" id="emotion-gradient"></div>
@@ -35,14 +38,13 @@
                 <div class="module" id="emotion-history-grid"></div>
                 <div class="module" id="particles"></div>
                 
-                <div class="text-output">
+                <div id="canvas-sketch"></div>
+                <div id="image-module"></div>
+                <div class="text-output clearfix">
                     <div class="text-output-l"></div>
                     <div class="text-output-r"></div>
                 </div>
-                <div id="canvas-sketch"></div>
-                <div id="image-module"></div>
                 <!-- <img class="svg-draw" src="img/ass_slapper.svg"> -->
-                <div id="svgContainer"></div>
             </div>
         </div>
 
