nature photos, ball pit updates

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
                     <div class="module-section svg-module" id="particles"></div>                    
                     <div class="module-section module" id="canvas-sketch"></div>
                     <div class="module-section module" id="image-module"></div>
+                    <div class='module-section module' id="nature-image-module"></div>
                 </div>
 
             </div>
         </div>
+        <audio></audio>
 
         <!-- <script async src="https://www.youtube.com/iframe_api"></script> -->
         <script type="text/javascript">
