added livestream, youtube sound, sound effects

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
                 <div class="module-group static-modules">
                     <div class="module" id="svg-drawing"></div>
-                    <div class="module" id="constellation"></div>
                     <div class="module" id="shape-drawing"></div>
                 </div>
 
@@ -46,12 +45,16 @@
                     </div>
 
                     <div class="module-section svg-module" id="emotion-history-grid"></div>
-                    <div class="module-section svg-module" id="particles"></div>                    
-                    <div class="module-section module" id="canvas-sketch"></div>
+                    <div class="module-section svg-module" id="particles"></div>
+
+                   <!--  <div class="module-section module" id="canvas-sketch"></div> -->
+                    <div class="module-section module" id="constellation"></div>
+
                     <div class="module-section module" id="image-module"></div>
                     <div class='module-section module' id="nature-image-module"></div>
                     <div class='module-section module' id="face-image-module"></div>
                     <div class='module-section module' id="local-video-module"></div>
+                    <div class='module-section module' id="livestream-module"></div>
                 </div>
 
             </div>
