added noise to graph

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <canvas id="overlay"></canvas>
             <div class="centered">
                 
-                <!-- <div class="module-section module text-output">
+                <div class="module-section module text-output">
                     <div class="text-output-0"></div>
                     <div class="text-output-1"></div>
-                </div> -->
+                </div>
 
 
                 <div class="module-group static-modules">
