many bug fixes, printing

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
                 <div class="module-group static-modules">
                     <div class="module" id="svg-drawing"></div>
+                    <div id="print-alert"></div>
                     <div class="module" id="shape-drawing"></div>
                 </div>
 
